se añaden algunos estilos y un temporizador para la espera de oponente

--- a/public/index.html
+++ b/public/index.html
@@ -2,39 +2,36 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
     <title>Tic Tac Toe Online</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
-        <h1>Tic Tac Toe Online</h1>
+    <div id="login">
+        <input type="text" id="aliasInput" placeholder="Tu alias" />
+        <button id="startBtn">Empezar</button>
+    </div>
 
-        <div id="formContainer">
-            <form id="usernameForm">
-                <input type="text" id="usernameInput" placeholder="Introduce tu alias" required />
-                <button type="submit">Jugar</button>
-            </form>
+    <div id="game" class="hidden">
+        <h2 id="status"></h2>
+        <div id="statusWrapper">
+            <div id="status"></div>
+            <div id="loader" class="hidden"></div>
         </div>
-
-        <div id="status" class="hidden"></div>
-        <div id="gameArea" class="hidden">
-            <div id="board" class="board">
-                <!-- Las 9 celdas del tablero -->
-                <div class="cell" data-index="0"></div>
-                <div class="cell" data-index="1"></div>
-                <div class="cell" data-index="2"></div>
-                <div class="cell" data-index="3"></div>
-                <div class="cell" data-index="4"></div>
-                <div class="cell" data-index="5"></div>
-                <div class="cell" data-index="6"></div>
-                <div class="cell" data-index="7"></div>
-                <div class="cell" data-index="8"></div>
-            </div>
+        <div id="board" class="board">
+            <div class="cell" data-index="0"></div>
+            <div class="cell" data-index="1"></div>
+            <div class="cell" data-index="2"></div>
+            <div class="cell" data-index="3"></div>
+            <div class="cell" data-index="4"></div>
+            <div class="cell" data-index="5"></div>
+            <div class="cell" data-index="6"></div>
+            <div class="cell" data-index="7"></div>
+            <div class="cell" data-index="8"></div>
         </div>
-
+        <button id="restartBtn" class="hidden">Volver a jugar 🔁</button>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
