Muestra el alias propio y el del oponente, además muestra las victorias actuales

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
     </div>
 
     <div id="game" class="hidden">
+        <div id="playerInfo" class="hidden">
+            <p><strong>Tú:</strong> <span id="yourName">-</span> | <strong>Victorias:</strong> <span
+                    id="yourWins">0</span></p>
+            <p><strong>Oponente:</strong> <span id="opponentName">-</span></p>
+        </div>
         <h2 id="status"></h2>
         <div id="statusWrapper">
             <div id="status"></div>
